--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.5",
-    "@angular/cdk": "^10.2.5",
-    "@angular/common": "~10.1.5",
-    "@angular/compiler": "~10.1.5",
-    "@angular/core": "~10.1.5",
-    "@angular/fire": "^6.0.3",
+    "@angular/animations": "^10.1.6",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "^10.1.6",
+    "@angular/compiler": "^10.1.6",
+    "@angular/core": "^10.1.6",
+    "@angular/fire": "^6.1.2",
     "@angular/flex-layout": "^10.0.0-beta.32",
-    "@angular/forms": "~10.1.5",
+    "@angular/forms": "^10.1.6",
     "@angular/localize": "~10.1.5",
-    "@angular/material": "^10.2.4",
-    "@angular/platform-browser": "~10.1.5",
-    "@angular/platform-browser-dynamic": "~10.1.5",
-    "@angular/router": "~10.1.5",
-    "@angular/youtube-player": "^11.0.0",
+    "@angular/material": "^10.2.7",
+    "@angular/platform-browser": "^10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
+    "@angular/router": "^10.1.6",
+    "@angular/youtube-player": "^11.0.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.0",
@@ -36,11 +36,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1002.0",
-    "@angular/cli": "~10.1.6",
-    "@angular/compiler-cli": "~10.1.5",
+    "@angular/cli": "^10.1.7",
+    "@angular/compiler-cli": "^10.1.6",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.19.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -52,6 +52,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.5"
   }
 }
